--- a/app/globals.css
+++ b/app/globals.css
@@ -36,14 +36,13 @@ html {
 }
 
 body {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* height: 100%; */
-
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   font-family: 'Inter';
   font-weight: 500;
-  /* background-color: #ffffff; */
-  /* overflow-x: hidden; */
+  background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 img {
@@ -155,12 +154,13 @@ img {
 }
 
 @media (max-width: 1000px) {
-  h1 {
-    font-size: 7vw;
-    text-indent: 2em;
-  }
 
   .cards-container {
     width: 95%;
+  }
+
+  .container{
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
